@@ -286,6 +286,9 @@ if test x$enable_bzip2 = xyes; then
     AC_MSG_WARN([*** libbz2 not found. bzip2 support has been disabled!])
     AC_MSG_WARN([*** you can disable this warning with --disable-bzip2])
   fi
+elif test x$enable_bzip2 = xdlopen; then
+  HAVE_BZIP2_SUPPORT="yes"
+  BZIP2_DLOPEN="yes"
 fi
 
 dnl Detect the LibC version
@@ -373,22 +376,27 @@ fi
 if test x$HAVE_BZIP2_SUPPORT = xyes; then
   AC_DEFINE(HAVE_BZIP2_SUPPORT, 1, libbz2 support.)
 
-  BZ2LIB="-lbz2"
-  if test x$LIBBZ2_PREFIX = xyes; then
-    AC_DEFINE(LIBBZ2_PREFIX, 1, libbz2 has "BZ_" prefix.)
-  fi
+  if test x$BZIP2_DLOPEN = xyes; then
+    AC_DEFINE(BZIP2_DLOPEN, 1, open libbz2 using dlopen)
+    BZ2LIB="-ldl"
+  else
+    BZ2LIB="-lbz2"
+    if test x$LIBBZ2_PREFIX = xyes; then
+      AC_DEFINE(LIBBZ2_PREFIX, 1, libbz2 has "BZ_" prefix.)
+    fi
 
-  # Use static version of BZIP2 under Carbon if it's available, otherwise
-  # just stick with the dynamic version
-  case "$target" in
-     powerpc-apple-darwin*)
-     if test -f /usr/lib/libbz2.a; then
-         BZ2LIB=""
-         LIBS="$LIBS /usr/lib/libbz2.a"
-         GUI_LIBS="$GUI_LIBS /usr/lib/libbz2.a"
-         CARBON_LIBS="$CARBON_LIBS /usr/lib/libbz2.a"
-     fi		
-  esac
+    # Use static version of BZIP2 under Carbon if it's available, otherwise
+    # just stick with the dynamic version
+    case "$target" in
+       powerpc-apple-darwin*)
+       if test -f /usr/lib/libbz2.a; then
+	   BZ2LIB=""
+	   LIBS="$LIBS /usr/lib/libbz2.a"
+	   GUI_LIBS="$GUI_LIBS /usr/lib/libbz2.a"
+	   CARBON_LIBS="$CARBON_LIBS /usr/lib/libbz2.a"
+       fi		
+    esac
+  fi
 fi
 
 AC_ARG_ENABLE(dialog,
